[package]
name = "snapshot-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
bigdecimal = { version = "0.3", features = ["serde"] }
solana-client = "1.16"
solana-sdk = "1.16"

[dev-dependencies] 